# corgi-math

./: CMakeLists.txt  README.md  install.bat
.github/workflows/: Actions.yml
UnitTests/: CMakeLists.txt
cmake/: Config.cmake.in
include/corgi/math/: Collisions.h  Line.h  MathUtils.h  Matrix.h  Plane.h  Random.h  Ray.h  Vec2.h  Vec2i.h  Vec4.h  easing.h  rectangle.h  vec3.h
include/corgi/math/detail/: Vec2.h  Vec3.h
src/: CMakeLists.txt  Collisions.cpp  Matrix.cpp  Random.cpp  Ray.cpp  Vec2.cpp  Vec2i.cpp  vec2i.cpp  vec3.cpp
tests/: CMakeLists.txt  benchmarks.cpp  main_test.cpp  ut_collisions.cpp  ut_matrix.cpp  ut_vec2.cpp  ut_vec3.cpp  ut_vec4.cpp
